Refine voxel water reflection receiver